# pdas

./: Cargo.toml  README.md  TODO.md  git.py  librarian.py
lib/annex/: Cargo.toml
lib/annex/src/: add.rs  annex.rs  git.rs  init.rs  lib.rs
lib/rarian/: Cargo.toml
lib/rarian/src/: archive.rs  config.rs  database.rs  db.rs  decode.rs  decoder.rs  error.rs  git.rs  index.rs  lib.rs  main.rs  query.rs  schema.rs  storage.rs  uuid.rs
lib/rarian/src/cli/: git.rs  mod.rs
lib/rarian/src/db/: dbm.rs  entry.rs  filekey.rs  meta.rs  range.rs  term.rs  title.rs
lib/rarian/src/decoders/: audio.rs  epub.rs  flac.rs  id3.rs  mod.rs  mpeg.rs  pdf.rs
lib/rarian/tests/: simple.rs
librarian-rs/: Cargo.toml  README.md
librarian-rs/src/: archive.rs  db.rs  error.rs  git.rs  main.rs  read.rs
librarian-rs/src/decoders/: audio.rs  mod.rs  text.rs
mime/application/: pdf.py
mime/audio/: mpeg.py
src/: archive.rs  config.rs  database.rs  db.rs  error.rs  git.rs  init.rs  main.rs  storage.rs
src/cli/: archive.rs  git.rs  init.rs
src/decoders/: audio.rs  mod.rs  text.rs
