[package]
name = "librarian-rs"
version = "0.1.0"
authors = ["Gregor Reitzenstein <me@dequbed.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
tree_magic = "0.2"

log = "0.4"
stderrlog = "0.4"

json = "0.12"
epub = "1.2"

serde = { version = "1.0", features = ["derive"] }
csv = "1.1"

lmdb-rkv = "0.11"
directories = "2.0"

libc = "*"

bincode = "1.1"

chrono = { version = "0.4", features = ["serde"] }

metaflac = "0.1"
