[package]
name = "git-annex"
version = "0.1.0"
authors = ["Gregor Reitzenstein <me@dequbed.space>"]
edition = "2018"

description = "Futures based git-annex abstraction"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"
git2 = "0.10"
futures = "0.3"
log = "0.4"

serde = "1.0"
serde_json = "1.0"
