[package]
name = "rarian"
version = "0.1.0"
authors = ["Gregor Reitzenstein <me@dequbed.space>"]
edition = "2018"
readme = "../../README.md"

[dependencies]

bincode = "1.1"
chrono = { version = "0.4", features = ["serde"] }
json = "0.12"
lazy_static = "1.4"
libc = "*"
lmdb-rkv = "0.11"
log = "0.4"
rust-stemmers = "1.1"
serde = { version = "1.0", features = ["derive"] }
tree_magic = "0.2"
git2 = "0.10"

[dependencies.metaflac]
version = "0.1"
optional = true

[dependencies.id3]
version = "0.3"
optional = true

[dependencies.epub]
version = "1.2"
optional = true

[features]
default = [ "flac", "mpeg", "pdf", "ebook" ]

flac = ["metaflac"]
mpeg = ["id3"]
pdf = []
ebook = ["epub"]
