[package]
name = "rarian"
version = "0.1.0"
authors = ["Gregor Reitzenstein <me@dequbed.space>"]
edition = "2018"
readme = "../../README.md"

[dependencies]

bincode = "1.1"
chrono = { version = "0.4", features = ["serde"] }
json = "0.12"
lazy_static = "1.4"
libc = "*"
lmdb-rkv = "0.11"
log = "0.4"
rust-stemmers = "1.1"
serde = { version = "1.0", features = ["derive"] }
tree_magic = "0.2"
git2 = "0.10"
futures-preview = "0.3.0-alpha.19"
rand = "0.7"
metaflac = "0.1"
id3 = "0.3"
epub = "1.2"
