[package]
name = "rarian"
version = "0.1.0"
authors = ["Gregor Reitzenstein <me@dequbed.space>"]
edition = "2018"
readme = "../../README.md"

[dependencies]
bincode = "1.1"
chrono = { version = "0.4", features = ["serde"] }
json = "0.12"
lazy_static = "1.4"
libc = "*"
lmdb-rkv = "0.14"
log = "0.4"
rust-stemmers = "1.1"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.10"
futures = "0.3"
serde_yaml = "0.8"

uuid = { version = "0.8", features = ["v4"] }

git-annex = { path = "../annex" }

[dev-dependencies]
tempfile = "3.1"
